fix javosite z-index

--- a/web/app/themes/sage/resources/assets/styles/components/callback/init.scss
+++ b/web/app/themes/sage/resources/assets/styles/components/callback/init.scss
@@ -193,6 +193,7 @@
   bottom: 20px !important;
   right: 15px !important;
   transition: bottom ease 200ms;
+  z-index: 4 !important;
 }
 
 .sticky_active {
