--- a/web/app/themes/sage/resources/assets/styles/components/cart/sticky.scss
+++ b/web/app/themes/sage/resources/assets/styles/components/cart/sticky.scss
@@ -1,6 +1,6 @@
 .sticky-cart {
   position: fixed;
-  z-index: 2;
+  z-index: 5;
   top: 0;
   left: 0;
   width: 100%;
@@ -65,7 +65,7 @@
       left: 50%;
       box-sizing: border-box;
       transform: translateX(-50%);
-      z-index: 3;
+      z-index: 6;
       flex-wrap: nowrap;
       justify-content: flex-end;
       align-items: center;
