--- a/web/app/themes/sage/resources/assets/styles/components/main-sidebar/init.scss
+++ b/web/app/themes/sage/resources/assets/styles/components/main-sidebar/init.scss
@@ -12,7 +12,7 @@
   transition-timing-function: ease-in-out;
   transition-property: right;
   transition-duration: 400ms;
-  z-index: 4;
+  z-index: 8;
   flex-direction: column;
   justify-content: space-between;
 
